# pai

./: .gitignore  DATA_CARD.md  MODEL_CARD.md  README.md  config.yaml  pyproject.toml  test.txt
finalproject/: attack.py  data.py  data_loader.py  defense.py  detector.py  features.py  metrics.py  models.py  train.py  utils.py  visualization.py
notebooks/: data_loader.ipynb  example.ipynb  finalproject.ipynb  module_testing.ipynb
notebooks/artifacts/: ae_svm_scaler_and_model.joblib  convdecoder.onnx  convencoder.onnx  smallcnn.onnx
