[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = "Template for RUC Practical AI final project."
authors = ["Mauro J. Sanchirico III <156733573+mauro-j-sanchirico@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
# Captum currently requires numpy < 2.0, so we pin numpy accordingly.
numpy = ">=1.26,<2.0"
matplotlib = "^3.9.2"
notebook = "^7.2.2"
ipython = "^8.27.0"
ipympl = "^0.9.4"
torch = "^2.5.1"
torchvision = "^0.20.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scipy = "^1.14.1"
onnx = "^1.17.0"
tqdm = "^4.67.1"
scikit-image = "^0.25.2"
captum = "^0.8.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^24.8.0", extras = ["jupyter"]}
isort = "^5.13.2"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.(pyi?|ipynb)$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
